# maui63_data_archiving

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: maui63_data_archiving_ci.yml  python-app.yml
docker/: docker-compose.mlflow.yaml
maui63_data_archiving/: converter.py  dataset.py  image_sequence_to_video.py
maui63_data_archiving/converters/: abstract.py  h265.py  jxl.py
maui63_data_archiving/detection/: __init__.py
maui63_data_archiving/image_source/: abstract.py  folder.py  video.py
maui63_data_archiving/ml/: classification.py  dataset.py  inspect_model.py  train.py  train_dino.py  train_rf_detr.py
scripts/: anomaly_detection.py  clip_investigation.py  dinov3_investigation.py  download_datasets.py  img_count_size_plot.py  plot_converter_compression.py
scripts/antigravity_scripts/: test_detection.py  test_mask_conversion.py  test_similarity_init_feature.py  train_mlp.py
tests/: test_image_sequence_to_video.py
